# NeuralNetCpp

./: CMakeLists.txt  Layer.cpp  Layer.h  Network.cpp  Network.h  Node.cpp  Node.h  README.md  main.cpp  plot_csv.py
